Fix font on mobile

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,6 +8,13 @@ html, body {
   }
 }
 
+h1 {
+  font-size: 1.5em;
+  @media (min-width: 768px) {
+    font-size: 2em;
+  }
+}
+
 input {
   height: 30px;
   padding-left: 15px;
